Project

General

Profile

Actions

Bug #36248

closed

common: WeightedPriorityQueue leaks memory

Added by Radoslaw Zarzynski over 5 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Category:
-
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

It uses Boost's intrusive containers but forgets to free the nodes on instance destruction.


Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #37429: luminous: common: WeightedPriorityQueue leaks memoryResolvedRadoslaw ZarzynskiActions
Copied to Ceph - Backport #37430: mimic: common: WeightedPriorityQueue leaks memoryResolvedRadoslaw ZarzynskiActions
Actions #1

Updated by Radoslaw Zarzynski over 5 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Sage Weil over 5 years ago

  • Status changed from Fix Under Review to Pending Backport

Radek, can you check if this needs backports?

Actions #3

Updated by Nathan Cutler over 5 years ago

@Radoslaw Smigielski, ping, can you answer Sage's question?

Actions #4

Updated by Radoslaw Zarzynski over 5 years ago

  • Backport set to mimic, luminous
Actions #5

Updated by Radoslaw Zarzynski over 5 years ago

  • Copied to Backport #37429: luminous: common: WeightedPriorityQueue leaks memory added
Actions #6

Updated by Radoslaw Zarzynski over 5 years ago

  • Copied to Backport #37430: mimic: common: WeightedPriorityQueue leaks memory added
Actions #7

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF