common: fix memory leaks in WeightedPriorityQueue.

Fixes: http://tracker.ceph.com/issues/36248
Signed-off-by: Radoslaw Zarzynski <rzarzyns@redhat.com>